[package]
name = "halbu"
version = "0.1.0"
edition = "2021"
description = "Diablo II save file parsing library."
authors = ["feor"]
license = "MIT"
homepage = "https://github.com/feored/halbu"
categories = ["games"]

[dependencies]
bit = "0.1.1"
csv = "1.2.2"
log = "0.4.20"
serde = { version = "1.0.177", features = ["derive"] }
serde_with = "3.1.0"
