[package]
rust-version = "1.85"
name = "halbu"
version = "0.2.0"
edition = "2021"
description = "Diablo II save file parsing library."
authors = ["feor"]
license = "MIT"
homepage = "https://github.com/feored/halbu"
categories = ["games"]

[dependencies]
bit = "0.1.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
