[package]
name = "halbu"
version = "0.3.0"
edition = "2021"
description = "Diablo II save file parsing library."
authors = ["feor"]
license = "MIT"
repository = "https://github.com/feored/halbu"
categories = ["games"]
readme = "README.md"
keywords = ["diablo2", "d2r", "save", "parser"]

[dependencies]
bit = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
unicode-script = "0.5.8"
unicode-segmentation = "1"
